--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1278,6 +1278,8 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1810,6 +1812,8 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1907,6 +1911,7 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1968,5 +1973,6 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
