--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -1035,6 +1035,8 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1132,6 +1134,7 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1193,5 +1196,6 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
