--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,6 +73,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -108,7 +109,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.176.137;
+set_real_ip_from 1.170.220.39;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -202,6 +203,7 @@ set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.100;
@@ -225,6 +227,7 @@ set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
+set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -717,19 +720,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:191;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:192;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:193;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:194;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:195;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:196;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:197;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:198;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:199;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:200;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:201;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:202;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:203;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
@@ -1028,6 +1018,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1205,6 +1196,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2479:0:6e00::1;
@@ -1260,7 +1252,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1842,7 +1833,6 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
