--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -46,19 +46,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:191;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:192;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:193;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:194;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:195;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:196;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:197;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:198;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:199;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:200;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:201;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:202;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:203;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
@@ -161,6 +148,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -337,6 +325,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2479:0:6e00::1;
@@ -392,7 +381,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
