--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,7 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
-allow 102.211.56.105;
 allow 102.211.56.12;
 allow 102.211.56.13;
 allow 102.211.56.250;
@@ -1252,6 +1251,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1833,6 +1833,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -2040,5 +2041,6 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
