--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -109,7 +109,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.170.196.25;
+set_real_ip_from 1.170.216.27;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -774,6 +774,19 @@ set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:194;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:195;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:196;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:197;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:198;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:199;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
@@ -1698,6 +1711,7 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1709,7 +1723,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1972,6 +1985,7 @@ set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
 set_real_ip_from 89.110.112.209;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
