--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -89,6 +89,19 @@ set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:194;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:195;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:196;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:197;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:198;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:199;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
