--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -109,7 +109,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.170.216.27;
+deny 1.168.180.20;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -201,7 +201,6 @@ deny 172.81.135.157;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
-deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -506,7 +505,6 @@ deny 185.246.128.161;
 deny 185.246.188.149;
 deny 185.246.188.73;
 deny 185.246.188.74;
-deny 185.246.189.140;
 deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
@@ -939,7 +937,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -951,7 +948,6 @@ deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.155.8.104;
-deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -1016,7 +1012,6 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -1232,7 +1227,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1285,6 +1279,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1293,6 +1288,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1331,7 +1327,6 @@ deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1565,7 +1560,6 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:14::24a8;
-deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc7:0:3::2d83;
@@ -1775,7 +1769,6 @@ deny 45.141.215.97;
 deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.148.10.169;
-deny 45.157.11.6;
 deny 45.192.243.213;
 deny 45.61.185.172;
 deny 45.61.186.203;
@@ -1845,7 +1838,6 @@ deny 45.95.169.109;
 deny 45.95.169.130;
 deny 45.95.169.14;
 deny 45.95.169.230;
-deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.182.21.248;
 deny 46.23.109.25;
@@ -1865,6 +1857,7 @@ deny 51.81.222.62;
 deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1941,6 +1934,7 @@ deny 82.221.131.5;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
@@ -1985,7 +1979,6 @@ deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
 deny 89.110.112.209;
-deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -2068,5 +2061,6 @@ deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.211.174.137;
+deny 95.211.244.28;
 deny 95.216.107.148;
 deny 98.128.173.33;
